@WebDev @Adding Monkey Cursor

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <a href=http://www.nitesh123456.com>Example</a>  
 <head>
-  <title>My HTML Page</title>
+  <title>Raise Your hand</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>This is my HTML page!</h1>
-  <p>This is some text on my page.</p>
+  <div class="container">
+    <h1>Move your cursor around!!Move around</h1>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+
+
