@Webbie @Add Cursor

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html lang="en">
-<a href=http://www.nitesh123456.com>Example</a>  
+<a href=https://www.google.com/search?q=monkey+with+a+middle+finger&sca_esv=593072056&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjW85KN_aKDAxU_gVYBHXfGBusQ_AUoAXoECAEQAw&biw=1422&bih=763&dpr=2.7#imgrc=-q-xQm-U3Dv5QM>Example</a>  
 <head>
   <title>Raise Your hand</title>
   <link rel="stylesheet" href="styles.css">
