@Webbie @final animated cursor

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html lang="en">
-<a href=https://previews.123rf.com/images/shock77/shock771603/shock77160300043/53432391-angry-ape-showing-middle-finger.jpg>Click for bliss</a>  
+  <button><a href=https://previews.123rf.com/images/shock77/shock771603/shock77160300043/53432391-angry-ape-showing-middle-finger.jpg>Click for bliss</a>  
+  </button>
 <head>
   <title>Raise Your hand</title>
   <link rel="stylesheet" href="styles.css">
@@ -10,7 +11,19 @@
     <h1>Move your cursor around!!Move around</h1>
   </div>
   <script src="script.js"></script>
+  <style>
+    body {
+      background-image: url("tangerines.jpg");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      cursor: url("cursor.cur"), auto 35 35;
+    }
+    </style> 
+    <div class="cursor small"></div>
+    <div class="cursor big"><div>
 </body>
+
 </html>
 
 
